--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.tcl linguist-detectable=false
+# Example of a `.gitattributes` file which reclassifies `.rb` files as Java:
+*.xdc linguist-language=VHDL
